# cs561-project-group-2

./: README.md  RandomForest.py  llm_classification.ipynb  logistic_model.py  main.py  preprocess_amazon_script.py  pyproject.toml  requirements.txt  svm_model.py
data/preprocessed/: test.csv  val.csv
data/raw/: test.csv  val.csv
